update gameshow link, fix leaderboard footer overlap, show rank in leaderboard backend function, add monthly and weekly score to public prof

--- a/src/components/Leaderboard2/leaderboard.css
+++ b/src/components/Leaderboard2/leaderboard.css
@@ -1,7 +1,6 @@
 .leaderboard-holder {
     display: flex;
     flex-direction: row;
-    height: 80vh;
     margin-top: 114px;
     /* overflow: scroll; */
 }
@@ -28,14 +27,13 @@
 .leaderboard-right {
     background-color: white;
     width: 55%;
-    overflow: scroll;
     height: 100%;
     padding-bottom: 20px;
 }
 
 @media screen and (max-width: 560px) {
     .leaderboard-holder {
-        height: 1500px;
+
         flex-direction: column;
     }
 
@@ -45,7 +43,6 @@
     }
 
     .leaderboard-right {
-        height: 3000px;
         width: 100%;
     }
 }
